# prbench-imitation-learning

./: .gitignore  .gitmodules  .pylintrc  MOTION2D_FILTERING_SUMMARY.md  README.md  README_NEW_FEATURES.md  README_REFACTORING.md  README_scaling_experiments.md  config.json  mypy.ini  pyproject.toml  run_comprehensive_scaling_experiment.py  run_scaling_experiment.py  scaling_results_motion2d-p1_behavior_cloning_20250918_170526.json  scaling_results_motion2d-p1_behavior_cloning_20250918_170638.json  scaling_results_motion2d-p1_behavior_cloning_20250918_170937.json  scaling_results_motion2d-p1_behavior_cloning_20250918_171551.json  scaling_results_motion2d-p1_behavior_cloning_20250918_172853.json  scaling_results_motion2d-p1_behavior_cloning_20250918_180621.json  test_scaling_experiment.py
.github/workflows/: ci.yml
scripts/: README_checkpoint_evaluation.md  README_expert_pipeline.md  README_geom2d_environments.md  README_pusht_example.md  collect_motion2d_demonstrations.py  convert_expert_to_lerobot_v3.py  evaluate_checkpoint.py  evaluate_diffusion_policy.py  generate_lerobot_data.py  hf_download_data.py  hf_upload_data.py  lerobot_eval.py  run_checkpoint_evaluation.py  run_comprehensive_scaling_experiment.py  run_diffusion_pipeline.py  run_expert_pipeline.sh  run_pusht_example.py  run_scaling_experiment.py  test_lerobot_pipeline.sh  test_scaling_experiment.py  test_train.sh  train_diffusion_policy.py  train_from_expert_data.py  train_lerobot_direct.py  train_lerobot_with_experts.py  upload_dataset_to_hub.py
src/: eval_utils.py
src/prbench_imitation_learning/: __init__.py  act_dataset.py  data_generation.py  evaluate.py  policy.py  train.py  utils.py
tests/: conftest.py  test_hf_upload_download.py  test_pusht_dataset.py  test_submodules.py  test_utils.py
